# word-solitaire-demo

./: Cargo.toml  README.md  rust-toolchain.toml
src/: lib.rs  matcher.rs  protocol.rs
