[package]
name = "word-solitaire-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
clap = { version = "4.0.8", features = ["derive"] }
futures = "0.3.24"
rand = "0.8.5"
tokio = { version = "1.21.2", features = ["sync"] }
